# DummyMetaProgrammingLibrary

./: CMakeLists.txt  main.cpp
include/: type_traits.hpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  TypeTest.cpp  cmake_install.cmake  runTests.cpp
